# task_cert

./: CURSOR_PROMPTS.md  INSTRUCTION.md  README.md  analyze_hierarchy.py  complete_text_data.txt  copy_target_ids.py  eval.py  idea.md  join_text.py  link.py  llm_factory.py  main.py  output.json  pyproject.toml
data/: test_data_updated.json
